[metadata]
name = photomosaic-generator-Kevin-Focke
version = 2
author = Kevin Focke
author_email = 19843342+KevinFocke@users.noreply.github.com
description = Converts an image into a beautiful photomosaic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KevinFocke/Photo_Mosaichttps://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Image Processing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src